--- a/pom.xml
+++ b/pom.xml
@@ -7,5 +7,21 @@
     <groupId>java</groupId>
     <artifactId>java-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
-    
+
+    <build>
+        <plugins>
+            <!-- 解决IDEA自动重置LanguageLevel和JavaCompiler版本的问题 -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+
+    </build>
+
 </project>
